[gd_scene load_steps=5 format=3 uid="uid://bhcuaauj347ll"]

[ext_resource type="Script" path="res://MainMenu/main_menu.gd" id="1_ag7ox"]

[sub_resource type="SystemFont" id="SystemFont_2m53t"]
font_names = PackedStringArray("Comic Sans MS")

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_r5f2v"]
bg_color = Color(1, 1, 1, 1)
border_width_left = 5
border_width_top = 5
border_width_right = 5
border_width_bottom = 5
border_color = Color(0, 0, 0, 1)
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5

[sub_resource type="SystemFont" id="SystemFont_xxxto"]
font_names = PackedStringArray("Comic Sans MS")

[node name="MainMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_ag7ox")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.215902, 0.215902, 0.215902, 1)

[node name="Title" type="Label" parent="."]
layout_mode = 1
offset_left = 21.0
offset_top = 21.0
offset_right = 120.0
offset_bottom = 64.0
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_constants/shadow_offset_x = 5
theme_override_constants/shadow_offset_y = 5
theme_override_fonts/font = SubResource("SystemFont_2m53t")
theme_override_font_sizes/font_size = 70
text = "testing"

[node name="Title2" type="Label" parent="."]
layout_mode = 1
offset_left = 29.0
offset_top = 128.0
offset_right = 250.0
offset_bottom = 590.0
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_constants/shadow_offset_x = 5
theme_override_constants/shadow_offset_y = 5
theme_override_fonts/font = SubResource("SystemFont_2m53t")
theme_override_font_sizes/font_size = 30
text = "blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah"
horizontal_alignment = 1
autowrap_mode = 3

[node name="Panel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = -849.0
offset_top = -260.0
offset_right = -42.0
offset_bottom = 260.0
grow_horizontal = 0
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_r5f2v")

[node name="ScrollContainer" type="ScrollContainer" parent="Panel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 12.0
offset_top = 13.0
offset_right = -12.0
offset_bottom = -13.0
grow_horizontal = 2
grow_vertical = 2
horizontal_scroll_mode = 0

[node name="VBoxContainer" type="VBoxContainer" parent="Panel/ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
alignment = 1

[node name="AnimatronicMovement" type="Button" parent="Panel/ScrollContainer/VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = SubResource("SystemFont_xxxto")
text = "AnimatronicMovementTest"

[node name="AnimationPlayerTest" type="Button" parent="Panel/ScrollContainer/VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = SubResource("SystemFont_xxxto")
text = "AnimationPlayerTest"

[node name="FightingGameCollisionBoxTest" type="Button" parent="Panel/ScrollContainer/VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = SubResource("SystemFont_xxxto")
text = "FightingGameCollisionBoxTest"

[node name="Button3" type="Button" parent="Panel/ScrollContainer/VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = SubResource("SystemFont_xxxto")
text = "N/A"

[node name="Button4" type="Button" parent="Panel/ScrollContainer/VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = SubResource("SystemFont_xxxto")
text = "N/A"

[node name="Button5" type="Button" parent="Panel/ScrollContainer/VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = SubResource("SystemFont_xxxto")
text = "N/A"

[node name="Button6" type="Button" parent="Panel/ScrollContainer/VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = SubResource("SystemFont_xxxto")
text = "N/A"

[node name="Button7" type="Button" parent="Panel/ScrollContainer/VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = SubResource("SystemFont_xxxto")
text = "N/A"

[node name="Button8" type="Button" parent="Panel/ScrollContainer/VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = SubResource("SystemFont_xxxto")
text = "N/A"

[node name="Button9" type="Button" parent="Panel/ScrollContainer/VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = SubResource("SystemFont_xxxto")
text = "N/A"

[node name="Button10" type="Button" parent="Panel/ScrollContainer/VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = SubResource("SystemFont_xxxto")
text = "N/A"

[node name="Button11" type="Button" parent="Panel/ScrollContainer/VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = SubResource("SystemFont_xxxto")
text = "N/A"

[node name="Button12" type="Button" parent="Panel/ScrollContainer/VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = SubResource("SystemFont_xxxto")
text = "N/A"

[node name="Button13" type="Button" parent="Panel/ScrollContainer/VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = SubResource("SystemFont_xxxto")
text = "N/A"

[node name="Button14" type="Button" parent="Panel/ScrollContainer/VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = SubResource("SystemFont_xxxto")
text = "N/A"

[node name="Button15" type="Button" parent="Panel/ScrollContainer/VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = SubResource("SystemFont_xxxto")
text = "N/A"

[node name="Button16" type="Button" parent="Panel/ScrollContainer/VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = SubResource("SystemFont_xxxto")
text = "N/A"

[node name="Button17" type="Button" parent="Panel/ScrollContainer/VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = SubResource("SystemFont_xxxto")
text = "N/A"

[node name="Button18" type="Button" parent="Panel/ScrollContainer/VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = SubResource("SystemFont_xxxto")
text = "N/A"

[node name="Button19" type="Button" parent="Panel/ScrollContainer/VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = SubResource("SystemFont_xxxto")
text = "N/A"

[node name="Button20" type="Button" parent="Panel/ScrollContainer/VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = SubResource("SystemFont_xxxto")
text = "N/A"

[node name="Button21" type="Button" parent="Panel/ScrollContainer/VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = SubResource("SystemFont_xxxto")
text = "N/A"

[node name="Button22" type="Button" parent="Panel/ScrollContainer/VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = SubResource("SystemFont_xxxto")
text = "N/A"

[node name="Button23" type="Button" parent="Panel/ScrollContainer/VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = SubResource("SystemFont_xxxto")
text = "N/A"

[node name="Button24" type="Button" parent="Panel/ScrollContainer/VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = SubResource("SystemFont_xxxto")
text = "N/A"

[node name="Button25" type="Button" parent="Panel/ScrollContainer/VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = SubResource("SystemFont_xxxto")
text = "N/A"

[node name="Button26" type="Button" parent="Panel/ScrollContainer/VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = SubResource("SystemFont_xxxto")
text = "N/A"

[node name="Button27" type="Button" parent="Panel/ScrollContainer/VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = SubResource("SystemFont_xxxto")
text = "N/A"

[node name="Button28" type="Button" parent="Panel/ScrollContainer/VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = SubResource("SystemFont_xxxto")
text = "N/A"

[node name="Button29" type="Button" parent="Panel/ScrollContainer/VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = SubResource("SystemFont_xxxto")
text = "N/A"

[node name="Button30" type="Button" parent="Panel/ScrollContainer/VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = SubResource("SystemFont_xxxto")
text = "N/A"

[connection signal="pressed" from="Panel/ScrollContainer/VBoxContainer/AnimatronicMovement" to="." method="_on_animatronic_movement_pressed"]
[connection signal="pressed" from="Panel/ScrollContainer/VBoxContainer/AnimationPlayerTest" to="." method="_on_animation_player_test_pressed"]
[connection signal="pressed" from="Panel/ScrollContainer/VBoxContainer/FightingGameCollisionBoxTest" to="." method="_on_fighting_game_collision_box_test_pressed"]
